@@ -1,3 +1,7 @@
+2012-11-21  Ingo Renner  <ingo@typo3.org>
+
+	* Added a post processing hook for the language detection service
+
 2012-08-28  Ingo Renner  <ingo@typo3.org>
 
 	* Removed option to use curl as HTTP transport between TYPO3 and the Solr server
